versions/v3.7.0/doxygen/html/structusbd__bos__desc__data.md
---
version: v3.7.0
source_url: https://docs.zephyrproject.org/3.7.0/doxygen/html/structusbd__bos__desc__data.html
original_path: doxygen/html/structusbd__bos__desc__data.html
---

| Logo | Zephyr API Documentation  3.7.0  A Scalable Open Source RTOS |
| --- | --- |

Loading...

Searching...

No Matches

usbd\_bos\_desc\_data Struct Reference

[Connectivity](group__connectivity.md) » [USB](group__usb.md) » [USB device core API](group__usbd__api.md)

USBD BOS Device Capability descriptor data.
[More...](#details)

`#include <[usbd.h](usbd_8h_source.md)>`

| Data Fields | |
| --- | --- |
| enum usbd\_bos\_desc\_utype | [utype](#a084578c905400488e5ce73c71f8aaf00): 8 |
|  | Descriptor usage type (not bDescriptorType). |

## Detailed Description

USBD BOS Device Capability descriptor data.

## Field Documentation

## [◆ ](#a084578c905400488e5ce73c71f8aaf00)utype

| enum usbd\_bos\_desc\_utype usbd\_bos\_desc\_data::utype |
| --- |

Descriptor usage type (not bDescriptorType).

---

The documentation for this struct was generated from the following file:

- zephyr/usb/[usbd.h](usbd_8h_source.md)

- [usbd\_bos\_desc\_data](structusbd__bos__desc__data.md)
- Generated on  for Zephyr API Documentation by [![doxygen](https://docs.zephyrproject.org/3.7.0/doxygen/html/doxygen.svg)](https://www.doxygen.org/index.html) 1.16.1
